# zirc

./: CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: README.md  devcontainer.json
.github/workflows/: ci.yml  release.yml
benchmark/: README.md
benchmark/results/: 2025-08-29_19-05-15Z.json  2025-08-29_19-06-39Z.json  20250829T181358Z.json  20250829T185945Z.json
benchmark/scripts/: factorial.zirc  fibonacci.zirc  loops.zirc  sorting.zirc
crates/zirc-bench/: Cargo.toml
crates/zirc-bench/src/: main.rs
crates/zirc-bytecode/: Cargo.toml
crates/zirc-bytecode/src/: builtin.rs  instruction.rs  lib.rs  program.rs  value.rs
crates/zirc-cli/: Cargo.toml
crates/zirc-cli/src/: common.rs  main.rs  repl.rs  repl_main.rs
crates/zirc-cli/tests/: examples.rs
crates/zirc-compiler/: Cargo.toml
crates/zirc-compiler/src/: builder.rs  compiler.rs  lib.rs
crates/zirc-fmt/: Cargo.toml
crates/zirc-fmt/src/: main.rs
crates/zirc-interpreter/: Cargo.toml
crates/zirc-interpreter/src/: env.rs  flow.rs  interpreter.rs  lib.rs  value.rs
crates/zirc-lexer/: Cargo.toml
crates/zirc-lexer/src/: lexer.rs  lib.rs
crates/zirc-parser/: Cargo.toml
crates/zirc-parser/src/: lib.rs  parser.rs
crates/zirc-syntax/: Cargo.toml
crates/zirc-syntax/src/: ast.rs  error.rs  lib.rs  token.rs
crates/zirc-vm/: Cargo.toml
crates/zirc-vm/src/: display.rs  lib.rs  vm.rs
docs/: contributing.md  grammar.md  index.md  language.md  roadmap.md
examples/: README.md  factorial.zirc  for_loop.zirc  io-basic.zirc  io-files.zirc  loops.zirc  print-test.zirc  scopes.zirc
examples/basic/: conditionals.zirc  error_demo.zirc  hello.zirc  plus.zirc  test_builtins.zirc  test_builtins_vm.zirc  test_errors.zirc  test_undefined.zirc
examples/errors/: missing_end.zirc  syntax_error.zirc  type_error.zirc  undefined_var.zirc
scripts/: build.bat  build.sh  clean.bat  clean.sh  install-windows.ps1  repl.bat  repl.sh  run-examples.bat  run-examples.sh  run-testing.bat  run-testing.sh  uninstall-windows.ps1
