[workspace]
members = [
    "crates/zirc-syntax",
    "crates/zirc-lexer",
    "crates/zirc-parser",
    "crates/zirc-interpreter",
    "crates/zirc-cli", 
    "crates/zirc-fmt",
    "crates/zirc-bench",
    "crates/zirc-bytecode",
    "crates/zirc-compiler",
    "crates/zirc-vm",
]
resolver = "2"

[workspace.package]
version = "0.0.1-dev"
edition = "2021"
authors = ["Zirc Management"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zirc-industries/zirc"
homepage = "https://github.com/zirc-industries/zirc"
description = "Lightweight, high-performance programming language designed for easy efficient code."
keywords = ["language", "interpreter", "repl", "programming"]
categories = ["development-tools", "compilers"]
rust-version = "1.70"

[workspace.dependencies]
# Internal dependencies with consistent paths
zirc-syntax = { path = "crates/zirc-syntax" }
zirc-lexer = { path = "crates/zirc-lexer" }
zirc-parser = { path = "crates/zirc-parser" }
zirc-interpreter = { path = "crates/zirc-interpreter" }
zirc-bytecode = { path = "crates/zirc-bytecode" }
zirc-compiler = { path = "crates/zirc-compiler" }
zirc-vm = { path = "crates/zirc-vm" }

# External dependencies with version management
owo-colors = "3"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Console"] }
winapi = { version = "0.3.9", features = ["winuser"] }