[package]
name = "zirc-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Benchmark runner for the Zirc language interpreter and toolchain"

[[bin]]
name = "zirc-bench"
path = "src/main.rs"

[dependencies]
# Internal
zirc-lexer.workspace = true
zirc-parser.workspace = true
zirc-interpreter.workspace = true
zirc-syntax.workspace = true

# External
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }

