[package]
name = "zirc-bytecode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Bytecode IR for the Zirc programming language"
keywords.workspace = true
categories.workspace = true

[dependencies]
zirc-syntax.workspace = true

