[package]
name = "zirc-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zirc-repl"
path = "src/repl_main.rs"

[dependencies]
zirc-lexer = { path = "../zirc-lexer" }
zirc-parser = { path = "../zirc-parser" }
zirc-interpreter = { path = "../zirc-interpreter" }
zirc-syntax = { path = "../zirc-syntax" }
owo-colors = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
