[package]
name = "zirc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Command-line interface and REPL for the Zirc programming language"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "zirc-repl"
path = "src/repl_main.rs"

[dependencies]
zirc-lexer.workspace = true
zirc-parser.workspace = true
zirc-interpreter.workspace = true
zirc-syntax.workspace = true
owo-colors.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
