[package]
name = "zirc-fmt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Code formatter for the Zirc programming language"
keywords.workspace = true
categories.workspace = true

[dependencies]
zirc-lexer.workspace = true
zirc-parser.workspace = true
zirc-syntax.workspace = true
