[package]
name = "zirc-syntax"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Syntax definitions and AST for the Zirc programming language"
keywords.workspace = true
categories.workspace = true

[dependencies]
